# TICK-Live-Automation

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  TICK.jucer  build_win.bat  installer.nsi  test_CMakeLists.txt
JUCE/examples/DemoRunner/: DemoRunner.jucer
JUCE/examples/DemoRunner/Builds/MacOSX/: Info-App.plist
JUCE/examples/DemoRunner/Builds/VisualStudio2017/: DemoRunner_App.vcxproj  resources.rc
JUCE/examples/DemoRunner/Builds/VisualStudio2019/: DemoRunner_App.vcxproj
JUCE/examples/DemoRunner/Builds/VisualStudio2022/: DemoRunner_App.vcxproj
JUCE/examples/DemoRunner/Builds/iOS/: Info-App.plist
JUCE/examples/DemoRunner/JuceLibraryCode/: JuceHeader.h
JUCE/extras/AudioPerformanceTest/Builds/VisualStudio2022/: AudioPerformanceTest_App.vcxproj
JUCE/extras/AudioPluginHost/Builds/VisualStudio2017/: AudioPluginHost_App.vcxproj
JUCE/extras/AudioPluginHost/Builds/VisualStudio2019/: AudioPluginHost_App.vcxproj
JUCE/extras/AudioPluginHost/Builds/VisualStudio2022/: AudioPluginHost_App.vcxproj
JUCE/extras/BinaryBuilder/Builds/VisualStudio2022/: BinaryBuilder_ConsoleApp.vcxproj
JUCE/extras/NetworkGraphicsDemo/Builds/VisualStudio2022/: NetworkGraphicsDemo_App.vcxproj
JUCE/extras/Projucer/Builds/VisualStudio2017/: Projucer_App.vcxproj
JUCE/extras/Projucer/Builds/VisualStudio2019/: Projucer_App.vcxproj
JUCE/extras/Projucer/Builds/VisualStudio2022/: Projucer_App.vcxproj
JUCE/extras/UnitTestRunner/Builds/VisualStudio2017/: UnitTestRunner_ConsoleApp.vcxproj
JUCE/extras/UnitTestRunner/Builds/VisualStudio2019/: UnitTestRunner_ConsoleApp.vcxproj
JUCE/extras/UnitTestRunner/Builds/VisualStudio2022/: UnitTestRunner_ConsoleApp.vcxproj
JUCE/extras/WindowsDLL/Builds/VisualStudio2022/: WindowsDLL_StaticLibrary.vcxproj
JUCE/modules/juce_audio_basics/utilities/: juce_SmoothedValue.h
JUCE/modules/juce_core/maths/: juce_MathsFunctions.h  juce_MathsFunctions_test.cpp
JUX/Demo/: Demo.jucer
JUX/components/: ListBox.cpp
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/components/: DialogComponent.cpp  EditBeatView.cpp  LookAndFeel.h  PerformView.cpp  PerformView.h  PresetsView.cpp  TopBar.cpp  TopBar.h
Source/model/: AbletonLink.cpp  AbletonLink.h  JuceState.h  TapModel.cpp  TapModel.h  TickModel.cpp  TickModel.h
Source/utils/: UtilityFunctions.h
cmake/: gitversion.cmake
libsamplerate/: CMakeLists.txt
scripts/: make_installer.ps1
